<resources>
    <string name="app_name">MovieSpotting</string>
    <string name="sort_by_popularity">Popular movies</string>
    <string name="sort_by_rating">Top-rated movies</string>
    <string name="now_playing">Now playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="share_menu_item_title">share</string>
    <string name="detail_activity_title">Movie Details</string>
    <string name="votes_string">votes</string>
    <string name="original_title">Original Title:</string>
    <string name="divider_description">Divider</string>
    <string name="watchlist_title">My Watchlist</string>
    <string name="snackbar_action_undo">UNDO</string>
    <string name="snackbar_failed_insert_text">Failed to add movie</string>
    <string name="snackbar_success_insert_text">Movie added in Watchlist</string>
    <string name="clearWatchlist">Clear Watchlist</string>
    <string name="sortWatchlistRecent">Recently added</string>
    <string name="sortWatchlistRating">Highest rating</string>
    <string name="nav_header_title">MovieSpotting</string>
    <string name="review_by">Review by:</string>
    <string name="read_more">...</string>
    <string name="nav_header_subtitle">Choose life. Choose movie.</string>
    <string name="snackbar_success_delete_text">Movie deleted from Watchlist</string>
    <string name="snackbar_failed_delete_text">Delete unsuccessful</string>
    <string name="snackbar_success_mass_delete_text">items deleted successfully</string>

</resources>