<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/show_now_playing"
            android:title="@string/now_playing"
            />
        <item
            android:id="@+id/sort_by_popularity"
            android:title="@string/sort_by_popularity">
        </item>

        <item
            android:id="@+id/sort_by_rating"
            android:title="@string/sort_by_rating">
        </item>
        <item
            android:id="@+id/show_upcoming"
            android:title="@string/upcoming">
        </item>

    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/watchlist"
            android:title="@string/watchlist_title">
        </item>
    </group>


</menu>